--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
-    <string name="app_name">iTrack</string>
+    <string name="app_name">1990Track</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_login">1990Track</string>
+    <string name="prompt_email">User Name</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Loged in as "</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be not be empty</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
